--- a/PartyRockApp/Base.lproj/Main.storyboard
+++ b/PartyRockApp/Base.lproj/Main.storyboard
@@ -79,7 +79,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="85"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cc8-GP-OcV" id="23y-7D-vIj">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="84.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="84"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="partybanner" translatesAutoresizingMaskIntoConstraints="NO" id="WHV-ii-kGu">
@@ -125,10 +125,45 @@
                             <constraint firstItem="lQE-Ud-NwS" firstAttribute="top" secondItem="gCO-zb-Gbe" secondAttribute="bottom" id="kx9-YY-4DT"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <segue destination="7hw-Gb-3JZ" kind="showDetail" identifier="VideoVC" id="bSy-m5-zs6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="156" y="106.59670164917542"/>
+            <point key="canvasLocation" x="94" y="107"/>
+        </scene>
+        <!--VideoVC-->
+        <scene sceneID="nds-9S-yM0">
+            <objects>
+                <viewController id="7hw-Gb-3JZ" customClass="VideoVC" customModule="PartyRockApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="08o-X3-KnJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="7fY-gh-Ed7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6xB-tJ-YSA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RM6-ZF-EvS">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="216"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="216" id="BAo-a6-hWx"/>
+                                </constraints>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.86567675799999999" green="0.86567675799999999" blue="0.86567675799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="RM6-ZF-EvS" secondAttribute="trailing" id="ouB-hT-1ZZ"/>
+                            <constraint firstItem="RM6-ZF-EvS" firstAttribute="top" secondItem="6xB-tJ-YSA" secondAttribute="top" id="q8e-hq-Oim"/>
+                            <constraint firstItem="RM6-ZF-EvS" firstAttribute="leading" secondItem="6xB-tJ-YSA" secondAttribute="leading" id="v2A-vT-CCK"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h3p-8v-KHW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="765.60000000000002" y="107.49625187406298"/>
         </scene>
     </scenes>
     <resources>
